added properties to my progress class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <section class="container">
+        <progress class="container">
             <main class="progress-container">
                 <div class="progress" id="progress"></div>
                 <div class="circle active">1</div>
@@ -18,8 +18,10 @@
                 <div class="circle">4</div>
             </main>
 
+            <button class="btn" id="prev" disabled>Prev</button>
+            <button class="btn" id="next">Next</button>
             
-        </section>
+        </progress>
         <script src="script.js"></script>
     </body>
 </html>
