added a read me sheet added all my java script and changed my elements to div for the sake of following the video

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     </head>
 
     <body>
-        <progress class="container">
-            <main class="progress-container">
+        <div class="container">
+            <div class="progress-container">
                 <div class="progress" id="progress"></div>
                 <div class="circle active">1</div>
                 <div class="circle">2</div>
                 <div class="circle">3</div>
                 <div class="circle">4</div>
-            </main>
+            </div>
 
             <button class="btn" id="prev" disabled>Prev</button>
             <button class="btn" id="next">Next</button>
             
-        </progress>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
